# AdventOfCode

./: .gitignore  README.md  run.sh
01/: main.cpp
02/: main.cpp
04/: main.cpp
05/: main.cpp
06/: main.cpp
07/: main.cpp
08/: main.cpp
12/: main.cpp
13/: main.cpp
14/: main.cpp
17/: main.cpp
18/: main.cpp
2018/: newday.sh  run.sh
2018/01/: main.cpp
2018/02/: main.cpp
2018/03/: main.cpp
2018/04/: date.cpp  date.h
2018/09/: main.cpp
2018/10/: main.cpp
2018/11/: main.cpp
2018/12/: main.cpp
2018/15/: main.cpp
2018/16/: main.cpp
2018/utils/: TxtReader.cpp  TxtReader.h
2019/01/: main.go
2019/02/: input.json  main.go
2019/03/: input.json  main.go
2019/04/: main.go
2019/05/: input.json  main.go
2019/06/: input.json  main.go
2019/07/: input.json  main.go
2019/08/: input.json  main.go
2019/09/: input.json  main.go
2019/11/: input.json  main.go
2019/13/: input.json  main.go
2019/15/: input.json  main.go
2020/advent_of_code/: Cargo.toml  new  run_all
2020/advent_of_code/src/01/: main.rs
2020/advent_of_code/src/02/: main.rs
2020/advent_of_code/src/03/: main.rs
2020/advent_of_code/src/04/: main.rs
2020/advent_of_code/src/05/: main.rs
2020/advent_of_code/src/06/: main.rs
2020/advent_of_code/src/07/: main.rs
2020/advent_of_code/src/08/: main.rs
2020/advent_of_code/src/09/: main.rs
2020/advent_of_code/src/10/: main.rs
2020/advent_of_code/src/11/: main.rs
2020/advent_of_code/src/12/: main.rs
2020/advent_of_code/src/13/: main.rs
2020/advent_of_code/src/14/: main.rs
2020/advent_of_code/src/15/: main.rs
2020/advent_of_code/src/16/: main.rs
2020/advent_of_code/src/17/: main.rs
2020/advent_of_code/src/18/: main.rs
2020/advent_of_code/src/19/: main.rs
2020/advent_of_code/src/20/: main.rs
2020/advent_of_code/src/21/: main.rs
2020/advent_of_code/src/22/: main.rs
2020/advent_of_code/src/23/: main.rs
2020/advent_of_code/src/24/: main.rs
2020/advent_of_code/src/25/: main.rs
2020/advent_of_code/src/boot_code/: main.rs
2021/day04/: Dockerfile
2024/01/src/: main.rs
2024/02/src/: main.rs
2024/03/: Cargo.toml
2024/03/src/: main.rs
2024/13/: Cargo.toml
utils/: TxtReader.cpp  TxtReader.h
(+14 files in other folders)
