[package]
name = "advent_of_code"
version = "0.1.0"
authors = ["skarrman"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1"
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.48"


[[bin]]
name = "01"
path = "src/01/main.rs"

[[bin]]
name = "02"
path = "src/02/main.rs"

[[bin]]
name = "03"
path = "src/03/main.rs"

[[bin]]
name = "04"
path = "src/04/main.rs"

[[bin]]
name = "05"
path = "src/05/main.rs"

[[bin]]
name = "06"
path = "src/06/main.rs"

[[bin]]
name = "07"
path = "src/07/main.rs"

[[bin]]
name = "boot_code"
path = "src/boot_code/main.rs"

[[bin]]
name = "09"
path = "src/09/main.rs"

[[bin]]
name = "10"
path = "src/10/main.rs"

[[bin]]
name = "11"
path = "src/11/main.rs"