[package]
name = "advent_of_code"
version = "0.1.0"
authors = ["skarrman"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1"
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.48"


[[bin]]
name = "01"
path = "src/01/main.rs"

[[bin]]
name = "02"
path = "src/02/main.rs"

[[bin]]
name = "03"
path = "src/03/main.rs"

[[bin]]
name = "04"
path = "src/04/main.rs"

[[bin]]
name = "05"
path = "src/05/main.rs"

[[bin]]
name = "06"
path = "src/06/main.rs"

[[bin]]
name = "07"
path = "src/07/main.rs"

[[bin]]
name = "boot_code"
path = "src/boot_code/main.rs"

[[bin]]
name = "09"
path = "src/09/main.rs"

[[bin]]
name = "10"
path = "src/10/main.rs"

[[bin]]
name = "11"
path = "src/11/main.rs"

[[bin]]
name = "12"
path = "src/12/main.rs"

[[bin]]
name = "13"
path = "src/13/main.rs"

[[bin]]
name = "14"
path = "src/14/main.rs"

[[bin]]
name = "15"
path = "src/15/main.rs"

[[bin]]
name = "16"
path = "src/16/main.rs"

[[bin]]
name = "17"
path = "src/17/main.rs"

[[bin]]
name = "18"
path = "src/18/main.rs"

[[bin]]
name = "19"
path = "src/19/main.rs"

[[bin]]
name = "20"
path = "src/20/main.rs"

[[bin]]
name = "21"
path = "src/21/main.rs"